--- a/package.json
+++ b/package.json
@@ -57,7 +57,7 @@
 		"lodash": "^4.17.10",
 		"lodash.uniqby": "^4.7.0",
 		"neo4j-driver": "^1.6.1",
-		"neo4j-graphql-js": "^2.1.0",
+		"neo4j-graphql-js": "~2.2.0",
 		"next-metrics": "^3.1.3",
 		"node-fetch": "^2.3.0",
 		"uuid": "^3.2.1"
