--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
 		"@financial-times/n-logger": "^5.6.4",
 		"@financial-times/s3o-middleware": "^2.0.6",
 		"apollo-server-express": "^1.4.0",
-		"aws-sdk": "^2.275.1",
+		"aws-sdk": "^2.401.0",
 		"body-parser": "^1.18.3",
 		"common-tags": "^1.7.2",
 		"connect-timeout": "^1.9.0",
@@ -63,18 +63,17 @@
 		"uuid": "^3.2.1"
 	},
 	"devDependencies": {
-		"@financial-times/rel-engage": "^5.1.0-beta.13",
+		"@financial-times/rel-engage": "^6.0.0",
 		"artillery": "^1.6.0-22",
 		"artillery-plugin-statsd": "^2.2.0",
 		"casual": "^1.5.19",
 		"chai": "^4.2.0",
 		"dotenv": "^6.0.0",
 		"faker": "^4.1.0",
-		"jest": "^23.6.0",
-		"jest-junit": "^5.2.0",
-		"lolex": "^3.0.0",
-		"nodemon": "^1.17.4",
-		"nyc": "^11.8.0",
+		"jest": "^24.1.0",
+		"jest-junit": "^6.2.1",
+		"lolex": "^3.1.0",
+		"nodemon": "^1.18.10",
 		"proxyquire": "^2.0.1",
 		"sinon": "^6.3.5",
 		"sinon-chai": "^3.0.0",
