Improved descriptions. Replace platform status with a new platform lifecycle. Deprecate hostPlatform in favour of hostPlatforms (to indicate multiple) - dont used hostingPlatform.

--- a/schema/types/Platform.yaml
+++ b/schema/types/Platform.yaml
@@ -30,12 +30,12 @@ properties:
     type: PlatformLifecycleStage
     label: Lifefcycle Stage
     description: Whether or not the platform still exists and is encouraged at the FT.
-  ownedBy:
+  pointOfContact:
     type: Person
     direction: outgoing
     label: Owned By
-    relationship: HAS_PLATFORM_OWNER
-    description: The FT person responsible for controlling the use of the platform.
+    relationship: HAS_POINT_OF_CONTACT
+    description: The FT person to contact about the platform.
   managedBy:
     type: Team
     direction: outgoing
