--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -160,11 +160,11 @@ properties:
     description: The systems where this person is responsible for managing GDPR processes related to personal data.
     hasMany: true
     fieldset: individual
-  platformOwnerFor:
+  platformPointOfContactFor:
     type: Platform
     direction: incoming
-    label: Platform owner for platforms
-    relationship: HAS_PLATFORM_OWNER
+    label: Platform point of contact
+    relationship: HAS_POINT_OF_CONTACT
     description: The platform(s) this person is a Platform Owner for.
     hasMany: true
     fieldset: individual
