--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -61,7 +61,7 @@ properties:
     fieldset: general
   hostPlatform:
     type: Word
-    label: Host platform (deprecated)
+    label: Host platform (deprecated, use Host Platforms)
     description: The technology platform used to host the service, e.g. Heroku.
     fieldset: general
   hostPlatforms:
@@ -401,7 +401,7 @@ properties:
   herokuPipelineName:
     type: Code
     label: Heroku pipeline Name
-    description: This is the name of the Heroku pipeline for this system. If you don't have a pipeline, this is the name of the app in Heroku. A pipeline is a group of Heroku apps that share the same codebase where each app in a pipeline represents the different stages in a continuous delivery workflow, i.e. staging, production. 
+    description: This is the name of the Heroku pipeline for this system. If you don't have a pipeline, this is the name of the app in Heroku. A pipeline is a group of Heroku apps that share the same codebase where each app in a pipeline represents the different stages in a continuous delivery workflow, i.e. staging, production.
     fieldset: release
 fieldsets:
   general:
