--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -14,7 +14,7 @@ FailoverArchitectureType:
 PlatformLifecycle:
   description: |
     The lifecycle stage of a platform.
-    Note that 'Deprecated' should be used for platforms that are no longer recommened for use, but may not be fully decommissioned yet
+    Note that 'Deprecated' should be used for platforms that are no longer recommended for use, but may not be fully decommissioned yet
   options:
     - Preproduction
     - Production
