Allow traffic light and action link within ops review to enable recording of review progress,

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -11,7 +11,7 @@ FailoverArchitectureType:
     - ActiveActive
     - ActivePassive
     - None
-RAGStatus:
+TrafficLight:
   description: Quality rating based on Red, Amber and Green.
   options:
     - Red
