--- a/schema/types/System.yaml
+++ b/schema/types/System.yaml
@@ -402,13 +402,13 @@ properties:
     fieldset: review
   sosTrafficLight:
     type: TrafficLight
-    description: The rating given by Operations to the quality of the information contain in this system as presented to them via the runbook.
+    description: The Service Operability Score (SOS) given by Operations during their manual review of the quality of the information contained in this system as presented to them via the runbook.
     label: SOS Traffic light
     fieldset: review
-  sosActionLink:
+  lastSOSReport:
     type: Url
-    label: SOS Action Link
-    description: A link to a document detailing the actions required to make the resulting runbook more usable by the Operations team.
+    label: Last SOS Report
+    description: A link to the Service Operability Score (SOS) report detailing the actions required to make the resulting runbook more usable by the Operations team.
     fieldset: review
   herokuPipelineName:
     type: Code
@@ -443,4 +443,4 @@ fieldsets:
   miscellaneous:
     heading: Miscellaneous
   review:
-    heading: Operations Review
+    heading: Service Operability Review
