Allow github details for user

--- a/schema/types/Person.yaml
+++ b/schema/types/Person.yaml
@@ -63,6 +63,20 @@ properties:
         For FT staff, if details are incorrect please raise this in the \#ip-people-api slack channel.
     fieldset: contact
     autoPopulated: true
+  githubName:
+    type: Word
+    canIdentify: true
+    label: Github Username
+    description: The Github user name for this person.
+    fieldset: contact
+    autoPopulated: true
+  isInGithubFtOrg:
+    type: Word
+    canIdentify: true
+    label: Is in github FT org
+    description: Whehter or not this person's github user account has been addded to the FT org.
+    fieldset: contact
+    autoPopulated: true
   phone:
     type: Word
     canIdentify: true
