--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "devDependencies": {
     "@financial-times/rel-engage": "^5.1.0-beta.13",
     "aws-sdk": "^2.395.0",
+    "fetch-mock": "^7.3.1",
     "jest": "^23.6.0",
     "valid-url": "^1.0.9"
   },
