--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "aws-sdk": "^2.395.0",
     "fetch-mock": "^7.3.1",
     "jest": "^23.6.0",
+    "jest-junit": "^6.3.0",
     "valid-url": "^1.0.9"
   },
   "dependencies": {
