use make to init db om circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,7 +69,7 @@ jobs:
             ./scripts/neo4j-plugins
             dbms_memory_heap_initial_size="1024m" dbms_memory_heap_max_size="1024m" neo4j/bin/neo4j start
             ./scripts/neo4j-wait-for-start
-            node server/init-db.js
+            make init-db
       - run:
           name: Run v2 tests
           command: make test
