--- a/schema/string-patterns.yaml
+++ b/schema/string-patterns.yaml
@@ -1,10 +1,11 @@
-NODE_TYPE: '^([A-Z][a-z]+)+$' # NodeType
-CODE: '^[a-z\d][a-z\d\-\.]*[a-z\d]$' # system-code.1
-RELATIONSHIP_NAME: '^[A-Z][A-Z_]*[A-Z]$' # HAS_A_RELATIONSHIP
-ATTRIBUTE_NAME: '^[a-z][a-zA-Z\d]+$' # attributeName
-COST_CENTRE: '[A-Z][A-Z]\d\d\d' # XT100
-PERMISSIVE: '^.*$'
-NO_SPACES: '^\S+$'
-STRICT_CODE: '^[a-z\d][a-z\d\-]*[a-z\d]$'
+NODE_TYPE: '^(?=.{2,64}$)([A-Z][a-z]+)+$' # NodeType
+CODE: '^(?=.{2,64}$)[a-z\d][a-z\d\-\.]*[a-z\d]$' # system-code.1
+RELATIONSHIP_NAME: '^(?=.{2,64}$)[A-Z][A-Z_]*[A-Z]$' # HAS_A_RELATIONSHIP
+ATTRIBUTE_NAME: '^(?=.{2,64}$)[a-z][a-zA-Z\d]+$' # attributeName
+COST_CENTRE: '^(?=.{2,64}$)[A-Z][A-Z]\d\d\d' # XT100
+PERMISSIVE: '^(?=.{2,64}$).*$'
+NO_SPACES: '^(?=.{2,64}$)\S+$'
+STRICT_CODE: '^(?=.{2,64}$)[a-z\d][a-z\d\-]*[a-z\d]$'
 REPO_NAME: '^(github|bitbucket)\:.*$'
-NO_LOWER_CASE: '^[^a-z]+$' # ANYTHING:?\NOT LOWERCASE
+NO_LOWER_CASE: '^(?=.{2,64}$)[^a-z]+$' # ANYTHING:?\NOT LOWERCASE
+MAX_LENGTH: '^(?=.{2,64}$).$'
