--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -5,13 +5,14 @@ properties:
   code:
     type: Code
     label: Code
-    description: Unique code/id for this cookie. 
+    description: Unique code/id for this cookie.
     canIdentify: true
     required: true
     unique: true
+    pattern: MAX_LENGTH
     fieldset: main
     autoPopulated: true
-    
+
   name:
     type: Name
     label: Name
@@ -29,7 +30,7 @@ properties:
     required: true
     isCore: true
     fieldset: main
-  
+
   classification:
     type: CookiePurpose
     label: ICC Classification
@@ -37,7 +38,7 @@ properties:
     required: true
     isCore: true
     fieldset: main
-  
+
   description:
     type: Sentence
     label: Description
@@ -49,17 +50,17 @@ properties:
   provider:
     type: Word
     label: Provider
-    description: Team/person or provider who set the cookie. 
+    description: Team/person or provider who set the cookie.
     required: true
     isCore: true
     fieldset: main
-  
+
   hasCookieInstanceOf:
     type: CookieInstance
     label: Cookie instance data
     relationship: IS_SET_AS
-    description: Cookie instance data for times cookie has been found on audit of product / domain. 
-    direction: outgoing 
+    description: Cookie instance data for times cookie has been found on audit of product / domain.
+    direction: outgoing
     hasMany: true
 
 
