--- a/schema/types/Tag.yaml
+++ b/schema/types/Tag.yaml
@@ -1,20 +1,21 @@
 name: Tag
 description: |
-  A tag (or often called pixel) is a short snippet of javascript (code) that does something on a website. 
-  In the context of marketing/advertising tags and pixels, they are often collecting some information about the 
-  visitor to a website and their behavior on the site. 
+  A tag (or often called pixel) is a short snippet of javascript (code) that does something on a website.
+  In the context of marketing/advertising tags and pixels, they are often collecting some information about the
+  visitor to a website and their behavior on the site.
 rank: 100
 properties:
   code:
     type: Code
     label: Code
-    description: Unique code/id for this tag. 
+    description: Unique code/id for this tag.
     canIdentify: true
     required: true
     unique: true
+    pattern: MAX_LENGTH
     fieldset: main
     autoPopulated: true
-    
+
   name:
     type: Name
     label: Name
@@ -36,11 +37,11 @@ properties:
   provider:
     type: Word
     label: Provider
-    description: Team/person or provider who set the tag. 
+    description: Team/person or provider who set the tag.
     required: true
     isCore: true
     fieldset: main
-  
+
   description:
     type: Sentence
     label: Description
@@ -53,8 +54,8 @@ properties:
     type: TagInstance
     label: Tag instance data
     relationship: IS_SET_AS
-    description: Tag instance data for times Tag has been found on audit of product / domain. 
-    direction: outgoing 
+    description: Tag instance data for times Tag has been found on audit of product / domain.
+    direction: outgoing
     hasMany: true
 
 fieldsets:
