--- a/schema/types/Team.yaml
+++ b/schema/types/Team.yaml
@@ -142,6 +142,14 @@ properties:
     description: The list of people who make up this team.
     hasMany: true
     fieldset: people
+  isPurchasedBy:
+    type: DataType
+    direction: incoming
+    relationship: IS_PURCHASED_BY
+  valuesGovernedBy:
+    type: DataType
+    direction: incoming
+    relationship: VALUES_GOVERNED_BY
 fieldsets:
   general:
     heading: General information
