--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
 		"http-errors": "^1.6.3",
 		"jsforce": "^1.9.1",
 		"lodash": "^4.17.10",
+		"lodash.groupby": "^4.6.0",
 		"lodash.uniqby": "^4.7.0",
 		"neo4j-driver": "^1.6.1",
 		"neo4j-graphql-js": "^2.3.1",
@@ -70,7 +71,7 @@
 		"dotenv": "^6.0.0",
 		"faker": "^4.1.0",
 		"fetch-mock": "^7.3.1",
-		"jest": "^24.1.0",
+		"jest": "^23.6.0",
 		"jest-junit": "^6.2.1",
 		"lolex": "^3.1.0",
 		"nodemon": "^1.18.10",
