added first draft of modelling capabilties

--- a/schema/enums.yaml
+++ b/schema/enums.yaml
@@ -134,5 +134,11 @@ CookieExpiry:
   options:
     - Session
     - Persistent
+CapabilityTier:
+  description: Level of importance of a business capability
+  options:
+    - Brand Critical
+    - Business Critical
+    - Not Critical
 
 
