--- a/schema/types/BusinessCapability.yaml
+++ b/schema/types/BusinessCapability.yaml
@@ -1,4 +1,5 @@
 name: BusinessCapability
+pluralName: BusinessCapabilities
 description: |
   Some business function carried out at FT e.g. ability to publish the news,
   ability to pay staff...
