--- a/package.json
+++ b/package.json
@@ -29,12 +29,12 @@
   },
   "dependencies": {
     "@financial-times/n-logger": "^5.7.2",
-    "semver": "^5.6.0",
     "clone": "^2.1.2",
     "common-tags": "^1.8.0",
     "deep-freeze": "0.0.1",
     "js-yaml": "^3.12.0",
     "lodash": "^4.17.10",
-    "node-fetch": "^2.3.0"
+    "node-fetch": "^2.3.0",
+    "semver": "^5.6.0"
   }
 }
