--- a/schema/types/Healthcheck.yaml
+++ b/schema/types/Healthcheck.yaml
@@ -14,6 +14,7 @@ properties:
       The unique identification code for the healthcheck. When creating a new healthcheck,
       choose a lower case, hyphenated string either similar to the url of the healthcheck,
       or briefly describing what it checks, e.g. my-system-us-east-1-health.
+    pattern: MAX_LENGTH_256
   isLive:
     type: Boolean
     isCore: true
