--- a/schema/types/Cookie.yaml
+++ b/schema/types/Cookie.yaml
@@ -9,7 +9,7 @@ properties:
     canIdentify: true
     required: true
     unique: true
-    pattern: MAX_LENGTH
+    pattern: MAX_LENGTH_64
     fieldset: main
     autoPopulated: true
 
