--- a/schema/types/TagInstance.yaml
+++ b/schema/types/TagInstance.yaml
@@ -10,7 +10,7 @@ properties:
     canIdentify: true
     required: true
     unique: true
-    pattern: MAX_LENGTH
+    pattern: MAX_LENGTH_64
     fieldset: main
     autoPopulated: true
 
