--- a/schema/types/BusinessCapability.yaml
+++ b/schema/types/BusinessCapability.yaml
@@ -1,8 +1,7 @@
 name: BusinessCapability
 pluralName: BusinessCapabilities
 description: |
-  Some business function carried out at FT e.g. ability to publish the news,
-  ability to pay staff...
+  Some business function carried out at FT e.g. ability to publish the news, ability to pay staff...
 rank: 10
 properties:
   code:
